--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,13 +1,21 @@
-body {
+/* body {
+  background-image: url(https://www.wallpapertip.com/wmimgs/50-504393_background-food-images-hd.jpg);
   margin: 0;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-}
+  background-size: cover; 
+} */
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+
