--- a/client/src/components/Landing.module.css
+++ b/client/src/components/Landing.module.css
@@ -13,6 +13,7 @@ body  {
   text-align: center;
   margin-top: 10%;
   color: rgb(235, 233, 211)  ;
+  font-family: 'Cookie', cursive;
 } 
 
 .landing button{
