--- a/client/src/components/cssComponents/Detail.module.css
+++ b/client/src/components/cssComponents/Detail.module.css
@@ -7,6 +7,13 @@
     font-family: 'Cookie', cursive;
 }
 
+.back{
+    display: flex;
+    justify-content:space-between;
+    align-items: center;
+    box-sizing: border-box;
+}
+
 .imagen{
     width: 400px;
     height: 300px;
